# cmps112-project

./: .gitignore  README.md  RSA-standard.txt  build.sh  run.sh
c/: CMakeLists.txt  README  cmps112-rsa.h  crypt.c  crypt.h  main.c  rsa.c
c/bigint/: BigIntegerUtils.hh  BigInteger_c.cc  BigInteger_c.h  CMakeLists.txt
c/cmake/: FindGMP.cmake
c/keygen/: CMakeLists.txt  calc.c  calc.h  main.c
c/msg-crypt/: CMakeLists.txt  crypt.c  crypt.h  main.c
c/rsa-lib/: CMakeLists.txt  rsa.c  rsa.h
c/ubigint/: CMakeLists.txt  libfns.cpp  libfns.hpp  relops.hpp  ubigint.cpp  ubigint.h  ubigint.hpp  ubigint_c.cpp
csharp/: build.sh  gen.cs  keygen_csharp.cs  read.cs  rsa_csharp.cs
haskell/: README.md  makefile  rsa-haskell.hs  rsa-keygen-haskell.hs  rsa.hs
key/: pubring.gpg  secring.gpg
python/: README  input2  keygen.py  out  priv_key  pub_key  rsa.py  test.py
test-files/: key.priv
